--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -76,8 +76,14 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 1200px;
   margin-top: 3rem;
+}
+
+.image{
+
+  height: 40%;
+  width: 40%;
 }
 
 .card {
